--- a/ChachaT/AddingTagMenuView.xib
+++ b/ChachaT/AddingTagMenuView.xib
@@ -8,62 +8,83 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AddingTagMenuView" customModule="ChachaT" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="580" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="el5-B6-7Nm">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="580" height="90"/>
                     <subviews>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3MP-Mt-rWi">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <rect key="frame" x="0.0" y="0.0" width="580" height="90"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpD-0y-Fro" userLabel="Content View">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="51"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="580" height="51"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VYd-5v-P7S" customClass="ChachaChoicesTagListView" customModule="ChachaT" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="32"/>
+                                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="580" placeholderIntrinsicHeight="32" translatesAutoresizingMaskIntoConstraints="NO" id="VYd-5v-P7S" customClass="ChachaChoicesTagListView" customModule="ChachaT" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="580" height="32"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="32" id="aDX-sg-3J4"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="aDX-sg-3J4"/>
+                                                </mask>
+                                            </variation>
                                         </view>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="VYd-5v-P7S" secondAttribute="bottom" constant="19" id="4Js-cY-D88"/>
-                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="top" secondItem="kpD-0y-Fro" secondAttribute="top" id="aBn-Qt-bnO"/>
-                                        <constraint firstAttribute="trailing" secondItem="VYd-5v-P7S" secondAttribute="trailing" id="e8L-oi-UNa"/>
-                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="leading" secondItem="kpD-0y-Fro" secondAttribute="leading" id="r5e-o6-KHL"/>
+                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="top" secondItem="kpD-0y-Fro" secondAttribute="top" id="0Yo-7D-u1S"/>
+                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="leading" secondItem="kpD-0y-Fro" secondAttribute="leading" id="CdE-DK-Fuz"/>
+                                        <constraint firstAttribute="bottom" secondItem="VYd-5v-P7S" secondAttribute="bottom" constant="19" id="Cl1-DH-Q7i"/>
+                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="leading" secondItem="kpD-0y-Fro" secondAttribute="leading" id="Hx6-Jm-fQj"/>
+                                        <constraint firstItem="VYd-5v-P7S" firstAttribute="top" secondItem="kpD-0y-Fro" secondAttribute="top" id="if0-Ju-CL4"/>
+                                        <constraint firstAttribute="trailing" secondItem="VYd-5v-P7S" secondAttribute="trailing" id="k2Q-AG-JKR"/>
+                                        <constraint firstAttribute="bottom" secondItem="VYd-5v-P7S" secondAttribute="bottom" id="pFj-6R-xKK"/>
+                                        <constraint firstAttribute="trailing" secondItem="VYd-5v-P7S" secondAttribute="trailing" id="qVS-56-MFU"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="0Yo-7D-u1S"/>
+                                            <exclude reference="CdE-DK-Fuz"/>
+                                            <exclude reference="k2Q-AG-JKR"/>
+                                            <exclude reference="pFj-6R-xKK"/>
+                                        </mask>
+                                    </variation>
                                 </view>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="kpD-0y-Fro" firstAttribute="leading" secondItem="3MP-Mt-rWi" secondAttribute="leading" id="owe-4y-i16"/>
-                                <constraint firstItem="kpD-0y-Fro" firstAttribute="top" secondItem="3MP-Mt-rWi" secondAttribute="top" id="rW0-2v-qGU"/>
-                                <constraint firstAttribute="trailing" secondItem="kpD-0y-Fro" secondAttribute="trailing" id="tYS-N5-DZX"/>
-                                <constraint firstAttribute="bottom" secondItem="kpD-0y-Fro" secondAttribute="bottom" id="y3Y-ev-ZN4"/>
+                                <constraint firstItem="kpD-0y-Fro" firstAttribute="leading" secondItem="3MP-Mt-rWi" secondAttribute="leading" id="FLX-kG-dZr"/>
+                                <constraint firstAttribute="trailing" secondItem="kpD-0y-Fro" secondAttribute="trailing" id="WKl-zF-qoZ"/>
+                                <constraint firstAttribute="bottom" secondItem="kpD-0y-Fro" secondAttribute="bottom" id="aV5-Vg-UL9"/>
+                                <constraint firstItem="kpD-0y-Fro" firstAttribute="top" secondItem="3MP-Mt-rWi" secondAttribute="top" id="vx7-Gr-ofX"/>
                             </constraints>
                         </scrollView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="kpD-0y-Fro" firstAttribute="width" secondItem="el5-B6-7Nm" secondAttribute="width" id="FSD-pX-9xc"/>
-                        <constraint firstAttribute="trailing" secondItem="3MP-Mt-rWi" secondAttribute="trailing" id="Jhc-Hi-8hc"/>
-                        <constraint firstItem="3MP-Mt-rWi" firstAttribute="top" secondItem="el5-B6-7Nm" secondAttribute="top" id="La6-s4-ygV"/>
-                        <constraint firstItem="3MP-Mt-rWi" firstAttribute="leading" secondItem="el5-B6-7Nm" secondAttribute="leading" id="dV1-Ak-CKg"/>
-                        <constraint firstAttribute="bottom" secondItem="3MP-Mt-rWi" secondAttribute="bottom" id="oGQ-on-XjN"/>
+                        <constraint firstAttribute="trailing" secondItem="3MP-Mt-rWi" secondAttribute="trailing" id="2A0-gM-iCH"/>
+                        <constraint firstItem="3MP-Mt-rWi" firstAttribute="top" secondItem="el5-B6-7Nm" secondAttribute="top" id="SXh-MW-4KE"/>
+                        <constraint firstItem="3MP-Mt-rWi" firstAttribute="leading" secondItem="el5-B6-7Nm" secondAttribute="leading" id="Wru-Rh-JkK"/>
+                        <constraint firstAttribute="bottom" secondItem="3MP-Mt-rWi" secondAttribute="bottom" id="Zx6-we-UF2"/>
+                        <constraint firstItem="kpD-0y-Fro" firstAttribute="width" secondItem="el5-B6-7Nm" secondAttribute="width" id="cwS-xJ-Q13"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="el5-B6-7Nm" secondAttribute="bottom" id="Bb7-KT-WWW"/>
-                <constraint firstAttribute="trailing" secondItem="el5-B6-7Nm" secondAttribute="trailing" id="JxY-1w-hDh"/>
-                <constraint firstItem="el5-B6-7Nm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="OX2-9y-CeB"/>
-                <constraint firstItem="el5-B6-7Nm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="WIW-kz-we7"/>
+                <constraint firstAttribute="trailing" secondItem="el5-B6-7Nm" secondAttribute="trailing" id="Azf-E0-SVR"/>
+                <constraint firstItem="el5-B6-7Nm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="C98-w3-G4f"/>
+                <constraint firstAttribute="bottom" secondItem="el5-B6-7Nm" secondAttribute="bottom" id="F0G-ct-PIM"/>
+                <constraint firstItem="el5-B6-7Nm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sZz-8v-mcX"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="addingMenuTagListView" destination="VYd-5v-P7S" id="DwM-Gf-COo"/>
                 <outlet property="backgroundView" destination="el5-B6-7Nm" id="YBb-wx-JDA"/>
             </connections>
-            <point key="canvasLocation" x="538" y="540"/>
+            <point key="canvasLocation" x="528" y="285"/>
         </view>
     </objects>
 </document>
