--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -98,14 +98,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YA0-a5-hbn" customClass="ProfilePhotoView" customModule="ChachaT" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YA0-a5-hbn" customClass="PhotoEditingView" customModule="ChachaT" customModuleProvider="target">
                                 <rect key="frame" x="20" y="84" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="4YW-87-wFo"/>
                                     <constraint firstAttribute="width" constant="240" id="CCd-bX-7xj"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JLw-LK-z0W" customClass="ProfilePhotoView" customModule="ChachaT" customModuleProvider="target">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JLw-LK-z0W" customClass="PhotoEditingView" customModule="ChachaT" customModuleProvider="target">
                                 <rect key="frame" x="324" y="84" width="100" height="100"/>
                             </view>
                         </subviews>
