--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -89,7 +89,7 @@
         <!--Edit Profile-->
         <scene sceneID="Dhh-ST-gQG">
             <objects>
-                <viewController id="Si2-TA-hhX" customClass="EditProfileViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditProfileViewController" id="Si2-TA-hhX" customClass="EditProfileViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D5t-g4-nOf"/>
                         <viewControllerLayoutGuide type="bottom" id="zdl-Zf-LL4"/>
@@ -97,23 +97,7 @@
                     <view key="view" contentMode="scaleToFill" id="ozl-f8-GDF">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YA0-a5-hbn" customClass="PhotoEditingView" customModule="ChachaT" customModuleProvider="target">
-                                <rect key="frame" x="20" y="84" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="4YW-87-wFo"/>
-                                    <constraint firstAttribute="width" constant="240" id="CCd-bX-7xj"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JLw-LK-z0W" customClass="PhotoEditingView" customModule="ChachaT" customModuleProvider="target">
-                                <rect key="frame" x="324" y="84" width="100" height="100"/>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="YA0-a5-hbn" firstAttribute="leading" secondItem="ozl-f8-GDF" secondAttribute="leading" constant="20" id="1gq-gV-Aim"/>
-                            <constraint firstItem="YA0-a5-hbn" firstAttribute="top" secondItem="D5t-g4-nOf" secondAttribute="bottom" constant="20" id="ZGi-ve-WgS"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Edit Profile" id="Fmw-ZK-vty">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="RWg-1N-BzH">
