--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -97,7 +97,62 @@
                     <view key="view" contentMode="scaleToFill" id="ozl-f8-GDF">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u1t-Ch-jFt">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="155-yz-ccQ" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggM-LL-fqe" customClass="PhotoEditingMasterLayoutView" customModule="ChachaT" customModuleProvider="target">
+                                                <rect key="frame" x="8" y="8" width="584" height="297"/>
+                                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="297" id="H9E-bc-TbU"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="28x-9I-4UJ"/>
+                                            <constraint firstAttribute="width" constant="240" id="RJ5-KR-8fD"/>
+                                            <constraint firstAttribute="trailing" secondItem="ggM-LL-fqe" secondAttribute="trailing" constant="8" id="bVr-f2-njx"/>
+                                            <constraint firstItem="ggM-LL-fqe" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="8" id="cfB-gR-WCw"/>
+                                            <constraint firstItem="ggM-LL-fqe" firstAttribute="top" secondItem="155-yz-ccQ" secondAttribute="top" constant="8" id="uBR-nO-lGL"/>
+                                            <constraint firstAttribute="bottom" secondItem="ggM-LL-fqe" secondAttribute="bottom" constant="231" id="xwp-53-Tky"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="28x-9I-4UJ"/>
+                                                <exclude reference="RJ5-KR-8fD"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="155-yz-ccQ" secondAttribute="trailing" id="7KK-0y-uti"/>
+                                    <constraint firstItem="155-yz-ccQ" firstAttribute="top" secondItem="u1t-Ch-jFt" secondAttribute="top" id="7hg-Xk-kbd"/>
+                                    <constraint firstItem="155-yz-ccQ" firstAttribute="leading" secondItem="u1t-Ch-jFt" secondAttribute="leading" id="JwV-S8-WEW"/>
+                                    <constraint firstAttribute="bottom" secondItem="155-yz-ccQ" secondAttribute="bottom" id="MP9-kx-Kkt"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="u1t-Ch-jFt" firstAttribute="height" secondItem="ozl-f8-GDF" secondAttribute="height" id="8ds-f3-zZG"/>
+                            <constraint firstItem="u1t-Ch-jFt" firstAttribute="top" secondItem="D5t-g4-nOf" secondAttribute="bottom" id="J1F-ZS-nVF"/>
+                            <constraint firstItem="155-yz-ccQ" firstAttribute="width" secondItem="ozl-f8-GDF" secondAttribute="width" id="Myx-1t-K31"/>
+                            <constraint firstAttribute="trailing" secondItem="u1t-Ch-jFt" secondAttribute="trailing" id="ieV-e7-1xR"/>
+                            <constraint firstItem="u1t-Ch-jFt" firstAttribute="leading" secondItem="ozl-f8-GDF" secondAttribute="leading" id="s4y-IW-SIv"/>
+                            <constraint firstItem="u1t-Ch-jFt" firstAttribute="width" secondItem="ozl-f8-GDF" secondAttribute="width" id="tiX-ry-aH3"/>
+                            <constraint firstItem="zdl-Zf-LL4" firstAttribute="top" secondItem="u1t-Ch-jFt" secondAttribute="bottom" id="yTk-RI-LuJ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="8ds-f3-zZG"/>
+                                <exclude reference="tiX-ry-aH3"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Edit Profile" id="Fmw-ZK-vty">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="RWg-1N-BzH">
