--- a/ChachaT/Base.lproj/PopUp.storyboard
+++ b/ChachaT/Base.lproj/PopUp.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qen-f5-BQ5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qen-f5-BQ5">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -24,7 +24,7 @@
                                     <constraint firstAttribute="height" constant="45" id="JDk-XM-RLI"/>
                                     <constraint firstAttribute="width" constant="330" id="bC8-w9-7Zq"/>
                                 </constraints>
-                                <state key="normal" title="Photo Library" backgroundImage="Question Bubble">
+                                <state key="normal" title="Photo Library">
                                     <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <variation key="default">
@@ -44,7 +44,7 @@
                                     <constraint firstAttribute="height" constant="60" id="iOm-t7-k29"/>
                                     <constraint firstAttribute="width" constant="330" id="tyY-iN-bI6"/>
                                 </constraints>
-                                <state key="normal" title="Camera" backgroundImage="Question Bubble">
+                                <state key="normal" title="Camera">
                                     <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <variation key="default">
@@ -193,6 +193,5 @@
     </scenes>
     <resources>
         <image name="Custom Question Bubble" width="340" height="68"/>
-        <image name="Question Bubble" width="340" height="68"/>
     </resources>
 </document>
