--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -111,15 +111,25 @@
                                                     <constraint firstAttribute="height" constant="297" id="H9E-bc-TbU"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qk4-LO-baz" customClass="AboutView" customModule="ChachaT" customModuleProvider="target">
+                                                <rect key="frame" x="8" y="313" width="240" height="128"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="7bM-To-tg6"/>
+                                                    <constraint firstAttribute="width" constant="240" id="vPj-hh-vl3"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="28x-9I-4UJ"/>
                                             <constraint firstAttribute="width" constant="240" id="RJ5-KR-8fD"/>
+                                            <constraint firstAttribute="bottom" secondItem="Qk4-LO-baz" secondAttribute="bottom" constant="95" id="Y7m-MU-OBB"/>
                                             <constraint firstAttribute="trailing" secondItem="ggM-LL-fqe" secondAttribute="trailing" constant="8" id="bVr-f2-njx"/>
                                             <constraint firstItem="ggM-LL-fqe" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="8" id="cfB-gR-WCw"/>
+                                            <constraint firstItem="Qk4-LO-baz" firstAttribute="top" secondItem="ggM-LL-fqe" secondAttribute="bottom" constant="8" id="puG-1N-ggy"/>
                                             <constraint firstItem="ggM-LL-fqe" firstAttribute="top" secondItem="155-yz-ccQ" secondAttribute="top" constant="8" id="uBR-nO-lGL"/>
-                                            <constraint firstAttribute="bottom" secondItem="ggM-LL-fqe" secondAttribute="bottom" constant="231" id="xwp-53-Tky"/>
+                                            <constraint firstItem="Qk4-LO-baz" firstAttribute="leading" secondItem="155-yz-ccQ" secondAttribute="leading" constant="8" id="xXz-kE-U9r"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
