--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -174,11 +174,20 @@
                         <segue destination="daK-C5-wmi" kind="custom" identifier="CustomBackgroundAnimationToSearchSegue" customClass="CustomBackgroundAnimationToSearchSegue" customModule="ChachaT" customModuleProvider="target" id="2hX-Ts-O6M"/>
                         <segue destination="fEb-nV-m3f" kind="presentation" identifier="OnboardingPageSegue" id="BBN-rh-MvJ"/>
                         <segue destination="UlM-dd-WqK" kind="show" identifier="BackgroundAnimationPageToAddingTagsPageSegue" id="tx2-If-MRg"/>
+                        <segue destination="xAM-nQ-U75" kind="show" identifier="BackgroundAnimationToMatchesSegue" id="6Hf-IT-c8a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1151.5" y="387.5"/>
+        </scene>
+        <!--MatchesViewController-->
+        <scene sceneID="brk-a0-jbM">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="MatchesViewController" storyboardName="Matches" referencedIdentifier="MatchesViewController" id="xAM-nQ-U75" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bGC-M3-gpR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="955.5" y="823"/>
         </scene>
         <!--AddingTagsViewController-->
         <scene sceneID="lMl-sD-RRf">
@@ -186,7 +195,7 @@
                 <viewControllerPlaceholder storyboardName="AddingTags" referencedIdentifier="AddingTagsViewController" id="UlM-dd-WqK" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8YR-PJ-1zN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1037.5" y="854"/>
+            <point key="canvasLocation" x="1151" y="886"/>
         </scene>
         <!--Filtering-->
         <scene sceneID="hOT-6i-yVN">
@@ -194,7 +203,7 @@
                 <viewControllerPlaceholder storyboardName="Filtering" id="daK-C5-wmi" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0aa-uD-aZd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1279.5" y="854"/>
+            <point key="canvasLocation" x="1390.5" y="833"/>
         </scene>
         <!--Page Main View Controller-->
         <scene sceneID="F7M-Lw-zEq">
